[package]
name = "actor_chat"
version = "0.1.0"
authors = ["maomao <5622876@qq.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rand = "0.3"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"


actix = "0.7.5"