[package]
name = "actor_ws_tcp_chat"
version = "0.1.0"
authors = ["maomao <5622876@qq.com>"]


[[bin]]
name = "websocket-tcp-server"
path = "src/main.rs"

[[bin]]
name = "websocket-tcp-client"
path = "src/client.rs"

[dependencies]
rand = "*"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-codec = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.7"
actix-web = "0.7"
