[package]
name = "mysql_demo"
version = "0.1.0"
authors = ["maomao <you@example.com>"]

[dependencies]
r2d2 = "0.8.2"
diesel = { version = "1.0.0", features = ["mysql"] }
diesel_codegen = { version = "0.16.0", features = ["mysql"] }
r2d2-diesel = "1.0.0"
dotenv="0.10"


rand = "0.5.5"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-codec = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.7"
actix-web = "0.7"

protobuf = "2.2.0"
log = "0.4.6"
easy-logging = "*"

[build-dependencies]
protobuf-codegen-pure = "2.2.0"