[package]
name = "mysqlc"
version = "0.1.0"
authors = ["maomao <5622876@qq.com>"]

[dependencies]
r2d2 = "0.8.2"
diesel = {version = "^1.3.0", features = ["mysql", "chrono", "serde_json", "r2d2"]}
diesel_codegen = { version = "0.16.0", features = ["mysql"] }
r2d2-diesel = "1.0.0"
dotenv="0.10"

singleton = "0.2.2"


log = "0.4.6"
easy-logging = "*"