[package]
name = "websocket-example"
version = "0.1.0"
authors = ["maomao <5622876@qq.com>"]


[[bin]]
name = "websocket-chat-server"
path = "src/main.rs"

[dependencies]
rand = "0.3"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"

actix = "0.7"
actix-web = "0.7"

protobuf = "2.2.0"

[build-dependencies]
protobuf-codegen-pure = "2.2.0"