[package]
name = "cmd"
version = "0.1.0"
authors = ["maomao <5622876@qq.com>"]

[[bin]]
name = "rs-node1"
path = "src/main.rs"

[dependencies]
actix = "0.7"
tokio = "0.1.7"
log = "0.4.6"
flexi_logger = "^0.10.3"

tcp_server={path = "../tcp_server"}
sys_config={path = "../sys_config"}
glib={path = "../glib"}
rpmd_broker={path = "../rpmd_broker"}


