[package]
name = "rpmd"
version = "0.1.0"
authors = ["mm <mm@mail.com>"]
edition = "2018"

[dependencies]
rand = "0.5.5"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-codec = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.7"
actix-web = "0.7"

tokio = "0.1.7"

log = "0.4.6"

sys_config={path = "../sys_config"}
glib={path = "../glib"}
table={path = "../table"}